# metas-unclib-python-wrapper

./: .gitignore  README.md  metas_unclib.py  metas_unclib_python_tutorial.ipynb  pyproject.toml  resistor_cube_example.ipynb  right_triangle_example.ipynb
examples/: gum_h1.py  interpolation.py  numerical_step.py  ode_solver.py  right_triangle.py  storage_performance.py
jupyter_notebooks/: right_triangle_example.ipynb
metas_unclib/: __init__.py  metas_unclib.py
metas_unclib/examples/: eigenvalue.py  gum_h2.py  gum_h3.py  gum_h4.py  integrate.py  nonlin_linprop_and_mcprop.py  optimizer.py  resistor_cube.py  right_triangle_linprop_and_mcprop.py  roots.py
metas_unclib/jupyter_notebooks/: metas_unclib_python_tutorial.ipynb  resistor_cube_example.ipynb
metas_unclib/tests/: test_usage.py
tests/: test_exponential_ops.py
