[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "metas-unclib"
dynamic = ["version"]
description = "An advanced measurement uncertainty calculator"
readme = "README.md"
dependencies = [
    "numpy",
    "pythonnet"
]
authors = [{name = "Michael Wollensack", email = "michael.wollensack@metas.ch"}]
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X"

]

[project.urls]
homepage = "https://www.metas.ch/unclib"

[project.optional-dependencies]
dev = [
    "black",
    "pylint",
    "pytest"
]
user = [
    "scipy",
    "matplotlib",
    "jupyter"
]

[tool.setuptools]
packages = ["metas_unclib"]

[tool.setuptools_scm]

[tool.black]
line-length = 100

[tool.pylint]
disable = "invalid-name"
ignore-patterns = "test_"
